@@ -71,17 +71,12 @@ int MPI_Bcast(void *buffer, int count, MPI_Datatype datatype,
       } 
     }
 
-    /* If there's only one node, we're done */
+    /* If there's only one node, or if the count is 0, we're done */
 
-    if (OMPI_COMM_IS_INTRA(comm) && ompi_comm_size(comm) <= 1) {
-      return MPI_SUCCESS;
-    }
-
-    /* Can we optimize? */
-
-    if (count == 0) {
-      return MPI_SUCCESS;
-    }
+    if ((OMPI_COMM_IS_INTRA(comm) && ompi_comm_size(comm) <= 1) ||
+        0 == count) {
+        return MPI_SUCCESS;
+    } 
 
     /* Invoke the coll component to perform the back-end operation */
 
